# fuzzing-validators

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
build-vs/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  rlbox_validator_fuzzing.sln  stage1_bad_validator.vcxproj  stage1_good_validator.vcxproj  stage1_good_validator.vcxproj.filters
build-vs/stage1_bad_validator.dir/RelWithDebInfo/: stage1_bad_validator.exe.recipe  stage1_bad_validator.ilk
build-vs/stage1_bad_validator.dir/RelWithDebInfo/stage1_b.044F6DAC.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  stage1_bad_validator.lastbuildstate
build-vs/stage1_good_validator.dir/RelWithDebInfo/: stage1_good_validator.exe.recipe  stage1_good_validator.ilk
build-vs/stage1_good_validator.dir/RelWithDebInfo/stage1_g.1E3D0998.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-vs/x64/RelWithDebInfo/ALL_BUILD/: ALL_BUILD.recipe
build-vs/x64/RelWithDebInfo/ZERO_CHECK/: ZERO_CHECK.recipe
build-vs/x64/RelWithDebInfo/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
docs/: build.md  file-guide.md  rlbox-contract.md  stage2-campaign-results.md  stage2-fuzzing-explainer.md  usage.md
reference/: host-validators-map.md  host.cpp  tests.rs
results/: stage2-campaign-results.txt
scripts/: fuzz.ps1  fuzz_all.ps1  fuzz_all.sh  gen_seeds.py  report.ps1  report.py  run_afl.sh  smoke_test.py
src/: smoke_host_examples.cpp  stage1_bad_validator.cpp  stage1_good_validator.cpp  stage1_harness.cpp  stage2_afl_bad_validator.cpp  stage2_afl_clamped_indexed.cpp  stage2_afl_div_by_zero.cpp  stage2_afl_div_by_zero_guarded.cpp  stage2_afl_four_sinks_all_good.cpp  stage2_afl_four_sinks_one_bad.cpp  stage2_afl_good_validator.cpp  stage2_afl_length_only_indexed.cpp  stage2_afl_unchecked_indexed.cpp  stage2_bad_validator.cpp  stage2_clamped_indexed.cpp  stage2_div_by_zero.cpp  stage2_div_by_zero_guarded.cpp  stage2_four_sinks_all_good.cpp  stage2_four_sinks_one_bad.cpp  stage2_good_validator.cpp  stage2_length_only_indexed.cpp  stage2_unchecked_indexed.cpp
src/core/: byte_parser.hpp  candidate.hpp  host_examples.hpp  rlbox_adapter.hpp  run_engine.hpp  sink_oracle.hpp  validators.hpp
